--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,11 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
+    <%= render 'layouts/navbar' %>
+    <%= flash[:alert] %>
+    <%= flash[:notice] %>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
