--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
       <ul class="nav navbar-nav">
         <% if current_user %>
          <li><%= link_to "Sign out", '/users/sign_out', method: 'delete' %></li>
-         <li><%=link_to "Hi, #{current_user.username}", '/' %></li>
+         <li><%= link_to "Hi, #{current_user.email}", '/'%></li>
        <% else %>
          <li><%= link_to "Sign up", '/users/sign_up' %></li>
          <li><%= link_to "Sign in", '/users/sign_in' %></li>
