add authorization and admin routes

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,6 +12,7 @@
          <li><%= link_to "Sign up", '/users/sign_up' %></li>
          <li><%= link_to "Sign in", '/users/sign_in' %></li>
        <% end %>
+       <li><%= link_to "Ask a Question", '/questions/new'%></li>
       </ul>
     </div>
   </div>
