--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -1,3 +1,12 @@
 <div class="container">
-  <p><%= "Hello #{current_user.username}!"%></p>
+
+  <% if @questions.any? %>
+    <% @questions.each do |question| %>
+    <h3><%= link_to question.question_title, question_path(question) %></h3>
+    <p><%= question.question_body %></p>
+    <% end %>
+  <% else %>
+    <p>There are no questions.</p>
+  <% end %>
+
 </div>
