--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,12 +1,10 @@
 <div class="container">
   <% if @questions.any? %>
     <% @questions.each do |question| %>
-    <h3><%= link_to question.question_title, question_path(question) %>?</h3>
+    <h3><%= link_to question.question_title, question_path(question) %></h3>
     <p><%= question.question_body %></p>
     <% end %>
   <% else %>
     <p>There are no questions.</p>
   <% end %>
-
-
 </div>
