--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,6 +13,10 @@
          <li><%= link_to "Sign in", '/users/sign_in' %></li>
        <% end %>
        <li><%= link_to "Ask a Question", '/questions/new'%></li>
+       <li><%= link_to "Add an Image", '/images/new'%></li>
+       <li><%= link_to "See All Questions", '/questions'%></li>
+       <li><%= link_to "See All Images", '/images'%></li>
+
       </ul>
     </div>
   </div>
