--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -1,16 +1,4 @@
 <div class="container">
-
-  <% if @questions.any? %>
-    <% @questions.each do |question| %>
-    <h3><%= link_to question.question_title, question_path(question) %></h3>
-    <p><%= question.question_body %></p>
-    <% end %>
-  <% else %>
-    <p>There are no questions.</p>
-  <% end %>
-
-  <% if is_admin? %>
-    <%= link_to "Add Question", new_question_path %>
-  <% end %>
-
+  <h1>Welcome to the Stack Overflow / Flickr Mashup!</h1>
+  <h4>Please take a look around.</h4>
 </div>
